--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -30,10 +30,10 @@
   font-size: smaller;
   color: dimgray;
 }
-
 .stats {
   display: flex;
   margin-top: 30px;
+  margin-bottom: 0;
   list-style-type: none;
   padding-left: 0;
   background-color: lavender;
