--- a/src/components/Statistics/Statistics.module.css
+++ b/src/components/Statistics/Statistics.module.css
@@ -1,3 +1,11 @@
+.container {
+  padding-top: 50px;
+  padding-bottom: 20px;
+  background-color: bisque;
+  display: flex;
+  justify-content: space-evenly;
+}
+
 .statistics {
   text-align: center;
 }
