--- a/src/components/TransactionHistory/TransactionHistory.module.css
+++ b/src/components/TransactionHistory/TransactionHistory.module.css
@@ -1,3 +1,8 @@
+.container {
+  padding-top: 50px;
+  padding-bottom: 20px;
+  background-color: bisque;
+}
 .transactionHistory {
   margin: auto;
   width: 900px;
